# zwm

./: Cargo.toml  Makefile.toml
scripts/: testbench.sh
src/: atoms.rs  env.rs  events.rs  main.rs  wm.rs
